# neomem

./: .gitignore  .gitmodules  .rsync-filter  CMakeLists.txt  Dockerfile.test.cpu  Makefile  README  README.md  debug.hpp  distributed_stream_loader.cpp  distributed_stream_loader.hpp  distributed_stream_loader_recon.cpp  distributed_stream_loader_recon.hpp  docker-compose.test.yml  engine_loader.cpp  engine_loader.hpp  env.sh  main.cpp  metrics.hpp  mpi_utils.hpp  rehearsal.cpp  spack.yaml  stream_loader.cpp  stream_loader.hpp  stream_loader_provider.cpp  stream_loader_provider.hpp  torch_client1.py  torch_client2.py  torch_test.py
examples/: buffer_implementations.py  clients.py
src/: CMakeLists.txt  distributed_stream_loader.cpp  distributed_stream_loader.hpp  engine_loader.cpp  engine_loader.hpp  exposed_memory.hpp  main.cpp  memory_utils.cpp  memory_utils.hpp  metrics.hpp  mpi_utils.hpp  queue_item.hpp  random_buffer.cpp  random_buffer.hpp  rehearsal.cpp  rpc_response.hpp  timer.hpp
tests/: README.md  test_torch.py
